[Feat] gameLoop에 actvie/passvie 스킬 Text UI 추가